--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,14 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "android.arch.paging:runtime:1.0.1"
 
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
+
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation ("com.github.bumptech.glide:glide:4.11.0@aar") {
+        transitive = true
+    }
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+
     testImplementation 'junit:junit:4.12'
 }
 
