--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.61'
     ext.nav_version = '2.2.1'
     ext.roomVersion = '2.2.3'
+    ext.work_version = "2.3.4"
     repositories {
         google()
         jcenter()
